--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
+:root {
+    --white: #FFFFFF;
+    --grey: #242424;
+}
+
+
 body {
-    background-color: white;
-    color: #242424;
+    background-color: var(--white);
+    color: var(--grey);
 }
 
 .dark-mode {
-    background-color: #242424;
-    color: white;
+    background-color: var(--grey);
+    color: var(--white);
 }
 
 img {
