--- a/style.css
+++ b/style.css
@@ -1,16 +1,21 @@
 :root {
     --white: #FFFFFF;
-    --grey: #242424;
+    --grey-1: #242424;
+    --grey-2: #202020;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+}
 
 body {
     background-color: var(--white);
-    color: var(--grey);
+    color: var(--grey-1);
 }
 
 .dark-mode {
-    background-color: var(--grey);
+    background-color: var(--grey-1);
     color: var(--white);
 }
 
