--- a/style.css
+++ b/style.css
@@ -24,6 +24,33 @@ header, section, footer {
     min-height: 100vh;
 }
 
+header {
+    position: relative;
+    padding-top: 60px;
+}
+
+header>div {
+    color: var(--white);
+    background-color: var(--grey-2);
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+}
+
+header>div>div {
+    display: flex;
+    flex-flow: row nowrap;
+}
+
+header p {
+    position: absolute;
+    top: 50vh;
+    color: var(--grey-1);
+}
+
 img {
     height: 500px;
 }
