--- a/style.css
+++ b/style.css
@@ -30,19 +30,30 @@ header {
 }
 
 header>div {
+    height: 60px;
     color: var(--white);
     background-color: var(--grey-2);
     position: absolute;
     top: 0px;
-    width: 100%;
+    width: calc(100% - 2rem);
+    padding: 0 1rem 0 1rem;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
+    align-items: center;
 }
 
 header>div>div {
     display: flex;
     flex-flow: row nowrap;
+    align-items: center;
+}
+
+nav>a {
+    text-decoration: none;
+    color: var(--white);
+    font-size: 1.5rem;
+    padding-right: 1rem;
 }
 
 header p {
