--- a/style.css
+++ b/style.css
@@ -73,3 +73,16 @@ header img {
     object-position: -5px 0;
 
 }
+
+#about h2 {
+    padding: 5rem 0 3rem 5rem;
+    width: calc(45% - 4rem);
+    font-size: 2rem;
+}
+
+#about p {
+    padding: 0 0 1rem 5rem;
+    width: calc(50% - 4rem);
+    font-size: 1.2rem;
+
+}
