Separate skillset into new section. Update nav links.

--- a/style.css
+++ b/style.css
@@ -27,6 +27,8 @@ header {
     height: calc(100vh - 60px);
     padding-top: 60px;
     position: relative;
+
+    background: #f4eddd;
 }
 
 header>div {
