--- a/style.css
+++ b/style.css
@@ -76,10 +76,6 @@ header img {
     object-position: -5px 0;
 }
 
-#about {
-    background-color: #58B09C;
-}
-
 #about h2 {
     padding: 5rem 0 3rem 5rem;
     width: calc(45% - 4rem);
@@ -90,6 +86,10 @@ header img {
     padding: 0 0 1rem 5rem;
     width: calc(50% - 4rem);
     font-size: 1.2rem;
+}
+
+#skillset {
+    background-color: #58B09C;
 }
 
 #skillset>h2 {
@@ -111,3 +111,31 @@ header img {
     flex-flow: row nowrap;
     justify-content: space-between;
 }
+
+#projects h2 {
+    padding: 5rem 0 3rem 5rem;
+    font-size: 2rem;
+}
+
+#projects>p {
+    padding: 0 0 2rem 5rem;
+}
+
+#projects-grid {
+    list-style-type: none;
+    margin: 0 5rem 0 5rem;
+    display: grid;
+    grid-template-columns: repeat(2, 50%);
+    grid-template-rows: repeat(4, 10rem);
+    grid-gap: 0;
+}
+
+#projects img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+
+
