--- a/style.css
+++ b/style.css
@@ -154,13 +154,32 @@ header img {
 
 #projects-grid h3 {
     font-size: 1.8rem;
+    padding-bottom: 1rem;
 }
 
 #projects-grid a {
-
     color: var(--grey-1);
     text-decoration: none;
     font-size: 1rem;
+}
+
+#projects-grid h3>a{
+    font-size: 1.8rem;
+    color: var(--yellow-1);
+    background-color: var(--grey-1);
+}
+
+#projects-grid h3>a:hover{
+    text-decoration: underline;
+}
+
+#projects-grid div>a {
+    font-size: 1.2rem;
+    padding-top: 0.5rem;
+}
+
+#projects-grid div>a:hover {
+    text-decoration: underline;
 }
 
 div.project-1 {
