--- a/style.css
+++ b/style.css
@@ -140,6 +140,37 @@ header img {
     "p4-content p4-img";
 }
 
+div.project-1 {
+    grid-area: p1-content;
+}
+
+img.project-1 {
+    grid-area: p1-img;
+}
+
+div.project-2 {
+    grid-area: p2-content;
+}
+img.project-2 {
+    grid-area: p2-img;
+}
+
+div.project-3 {
+    grid-area: p3-content;
+}
+
+img.project-3 {
+    grid-area: p3-img;
+}
+
+div.project-4 {
+    grid-area: p4-content;
+}
+
+img.project-4 {
+    grid-area: p4-img;
+}
+
 #projects-grid img{
     width: 100%;
     height: 100%;
@@ -195,33 +226,6 @@ header img {
     padding-top: 0.3rem;
 }
 
-div.project-1 {
-    grid-area: p1-content;
-}
-
-img.project-1 {
-    grid-area: p1-img;
-}
-
-div.project-2 {
-    grid-area: p2-content;
-}
 img.project-2 {
-    grid-area: p2-img;
-}
-
-div.project-3 {
-    grid-area: p3-content;
-}
-
-img.project-3 {
-    grid-area: p3-img;
-}
-
-div.project-4 {
-    grid-area: p4-content;
-}
-
-img.project-4 {
-    grid-area: p4-img;
+    object-fit: cover;
 }
