--- a/style.css
+++ b/style.css
@@ -229,3 +229,17 @@ img.project-4 {
 img.project-2 {
     object-fit: cover;
 }
+
+
+#interests h2 {
+    width: 100%;
+    height: 12%;
+    font-size: 2rem;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
