--- a/style.css
+++ b/style.css
@@ -295,4 +295,21 @@ img.project-2 {
     padding-top: 0.2rem;
 }
 
+footer {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+}
 
+footer hr {
+    width: 10em;
+    height: 0.2em;
+    margin: 1em 0 2em 0;
+    border: none;
+    background-color: var(--grey-1);
+}
+
+footer a {
+    margin: 0 1em 0 1em;
+}
