--- a/style.css
+++ b/style.css
@@ -117,13 +117,19 @@ header img {
 }
 
 #projects h2 {
-    padding: 5rem 0 3rem 5rem;
+    width: 100%;
+    height: 10vh;
     font-size: 2rem;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
 }
 
 #projects>p {
-    padding: 0 0 2rem 5rem;
+    padding-bottom: 2rem;
     font-size: 1.1rem;
+    text-align: center;
 }
 
 #projects-grid {
@@ -131,7 +137,6 @@ header img {
     display: grid;
     grid-template-columns: repeat(2, 50%);
     grid-template-rows: repeat(4, 20rem);
-    grid-gap: 0;
     grid-template-areas:
     "p1-img p1-content"
     "p2-content p2-img"
