--- a/style.css
+++ b/style.css
@@ -32,7 +32,6 @@ header {
     height: calc(100vh - 60px);
     padding-top: 60px;
     position: relative;
-
     background: var(--yellow-1);
 }
 
@@ -80,16 +79,34 @@ header img {
     object-position: -5px 0;
 }
 
-#about h2 {
-    padding: 5rem 0 3rem 5rem;
-    width: calc(45% - 4rem);
+#about>div {
+    height: 100%;
+    width:60%;
+    padding: 0 20%;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+}
+
+#about h2, #about p:first-of-type {
+    padding-bottom: 1rem;
+    font-size: 2rem;
+}
+
+#about p:first-of-type {
+    padding-bottom: 1.4rem;
     font-size: 2rem;
 }
 
 #about p {
-    padding: 0 0 1rem 5rem;
-    width: calc(50% - 4rem);
+    padding-bottom: 1rem;
     font-size: 1.2rem;
+}
+
+#about span {
+    background: var(--grey-1);
+    padding: 0 0.4rem;
+    color: var(--white);
 }
 
 #skillset {
