--- a/style.css
+++ b/style.css
@@ -16,3 +16,27 @@ body {
     background-color: var(--white);
     color: var(--grey-1);
 }
+
+header, section, footer {
+    width: 100vw;
+    height: calc(100vh - 60px);
+}
+
+header {
+    padding-top: 60px;
+}
+
+header>div {
+    height: 60px;
+    color: var(--white);
+    background-color: var(--grey-2);
+    position: fixed;
+    top: 0;
+    width: calc(100% - 2rem);
+    padding: 0 1rem 0 1rem;
+}
+
+img {
+    max-width: 50vw;
+}
+
