--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@
     font-family: 'Commissioner', sans-serif;
 }
 
+
+img {
+    max-width: 50%;
+}
+
 body {
     background-color: var(--white);
     color: var(--grey-1);
@@ -24,6 +29,11 @@ header, section, footer {
 
 header {
     padding-top: 60px;
+    background: var(--yellow-1);
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
 }
 
 header>div {
@@ -87,7 +97,21 @@ header a:last-of-type {
     padding-bottom: 2rem;
 }
 
-img {
-    max-width: 50%;
+header img:first-of-type {
+    width: 60vw;
+    border-radius: 30vw;
+    object-fit: cover;
+    margin-bottom: 30px;
 }
 
+header img:nth-of-type(2) {
+    display: none;
+}
+
+header>p {
+    width: 80%;
+    font-size: 1.4rem;
+    color: var(--grey-1);
+    text-align: center;
+    padding-bottom: 4rem;
+}
