--- a/style.css
+++ b/style.css
@@ -59,18 +59,18 @@ header>div>p {
     font-weight: bold;
 }
 
-header i {
+header div>i {
     height: 60px;
     width: calc(40vw - 10px);
     text-align: right;
     font-size: 2.4em;
 }
 
-header i:before {
+header div>i:before {
     line-height: 60px;
 }
 
-header i + nav {
+header div>i + nav {
     display: none;
     position: absolute;
     width: 40vw;
@@ -85,7 +85,7 @@ header i:hover + nav, header i:focus + nav, header nav:hover, header nav:focus {
     justify-content: flex-start;
 }
 
-header a {
+header nav>a {
     color: var(--white);
     text-decoration: none;
     font-size: 1.4rem;
@@ -93,7 +93,7 @@ header a {
     padding: 1rem 0;
 }
 
-header a:last-of-type {
+header nav>a:last-of-type {
     padding-bottom: 2rem;
 }
 
@@ -115,3 +115,10 @@ header>p {
     text-align: center;
     padding-bottom: 4rem;
 }
+
+header>a>i {
+    font-size: 2rem;
+    color: var(--grey-1);
+}
+
+
