--- a/style.css
+++ b/style.css
@@ -124,4 +124,32 @@ header>a>i {
     color: var(--grey-1);
 }
 
+#about>div {
+    height: 100%;
+    width:60%;
+    padding: 0 20%;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+}
 
+#about h2, #about p:first-of-type {
+    padding-bottom: 1rem;
+    font-size: 2rem;
+}
+
+#about p:first-of-type {
+    padding-bottom: 1.4rem;
+    font-size: 2rem;
+}
+
+#about p {
+    padding-bottom: 1rem;
+    font-size: 1.2rem;
+}
+
+#about span {
+    background: var(--grey-1);
+    padding: 0 0.4rem;
+    color: var(--white);
+}
