--- a/style.css
+++ b/style.css
@@ -28,6 +28,9 @@ body {
 
 header, section, footer {
     width: 100vw;
+}
+
+header, section:not(#projects), footer {
     height: calc(100vh - 60px);
 }
 
@@ -225,14 +228,26 @@ header>a>i {
 }
 
 #projects {
-    width: 90vw;
-    padding: 5vw;
+    width: calc(100% - 2rem);
+    padding: 0 1rem;
 }
 
 #projects h2 {
-    padding: 1.5rem 0;
+    padding: 1.5rem 0 2rem 0;
     font-size: 2rem;
     width: 100%;
     text-align: center;
+}
+
+#projects-container>div {
+    width: 100%;
+    height: 200px;
+    background-color: var(--grey-1);
+    margin-bottom: 2.5rem;
+}
+
+#projects-container h3, #projects-container p, #projects-container a {
+    text-decoration: none;
+    color: var(--white);
 }
 
