--- a/style.css
+++ b/style.css
@@ -240,17 +240,20 @@ header>a>i {
 }
 
 #projects-container>div {
-    width: 100%;
-    height: 200px;
+    width: calc(100% - 2rem);
+    height: calc(200px - 2em);
     background-color: var(--grey-1);
+    padding: 1rem;
     margin-bottom: 2.5rem;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: left;
 }
 
 #projects-container h3, #projects-container p, #projects-container a {
-    text-decoration: none;
     color: var(--white);
 }
-
 
 div.project-1 {
     grid-area: project-1;
@@ -278,4 +281,16 @@ div.project-4 {
     background: linear-gradient(0.25turn, rgba(90, 20, 10, 0.2), rgba(90, 20, 10, 0.1)), url("./assets/projects/platformer-crop.png");
     background-position: center;
     background-size: cover;
+}
+
+#projects-container h3, #projects-container p, #projects-container a {
+    width:fit-content;
+    background: rgba(0, 0, 0, 0.6);
+    margin-bottom: 1rem;
+    padding: 0.2rem 0.5rem;
+    color: var(--white);
+}
+
+#projects-grid span>a {
+    margin-right: 1rem;
 }
