--- a/style.css
+++ b/style.css
@@ -18,10 +18,6 @@ html {
     font-family: 'Commissioner', sans-serif;
 }
 
-img {
-    max-width: 50%;
-}
-
 body {
     background-color: var(--white);
     color: var(--grey-1);
@@ -91,7 +87,7 @@ header div>i:before {
     line-height: 60px;
 }
 
-header div>i + nav {
+header nav {
     display: none;
     position: absolute;
     width: 120px;
@@ -120,6 +116,8 @@ header nav>a:last-of-type {
 
 header img:first-of-type {
     width: 60vw;
+    max-width: 50vh;
+    max-height: 50vh;
     border-radius: 30vw;
     object-fit: cover;
     margin-bottom: 30px;
@@ -131,6 +129,7 @@ header img:nth-of-type(2) {
 
 header>p {
     width: 80%;
+    max-width: 45rem;
     font-size: 1.4rem;
     color: var(--grey-1);
     text-align: center;
@@ -139,6 +138,33 @@ header>p {
 
 header .fa-caret-down {
     color: var(--grey-1);
+}
+
+@media (min-width: 600px) {
+    header h1 {
+        display: inline;
+        text-transform: uppercase;
+    }
+
+    header div>p {
+        display: none;
+    }
+
+    header p {
+        font-size: 2rem;
+    }
+
+    header nav {
+        width: 200px;
+    }
+
+    header nav>a {
+        font-size: 2rem;
+    }
+
+    header .fa-caret-down {
+        font-size: 3rem;
+    }
 }
 
 #about>div {
