--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ html {
 body {
     background-color: var(--white);
     color: var(--grey-1);
+    overflow-x: hidden;
 }
 
 header, section, footer {
