--- a/style.css
+++ b/style.css
@@ -228,6 +228,7 @@ header .fa-caret-down {
 }
 
 #skillset {
+    position: relative;
     display: flex;
     flex-flow: column nowrap;
     justify-content: flex-start;
@@ -278,6 +279,14 @@ header .fa-caret-down {
     fill: var(--white);
     height: 1rem;
     width: 1rem;
+}
+
+#skillset>span {
+    position: absolute;
+    width: 100vw;
+    left: 0;
+    bottom: 0;
+    margin-bottom: 1rem;
 }
 
 #skillset .fa-caret-down {
