--- a/style.css
+++ b/style.css
@@ -231,7 +231,7 @@ header .fa-caret-down {
     position: relative;
     display: flex;
     flex-flow: column nowrap;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     background-color: var(--green-1);
 }
@@ -240,14 +240,9 @@ header .fa-caret-down {
     color: var(--white);
 }
 
-#skillset>div {
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-items: center;
-}
-
 #skillset h2 {
+    position: absolute;
+    top: 0;
     padding: 1.5rem 0;
     font-size: 2rem;
 }
@@ -256,8 +251,8 @@ header .fa-caret-down {
     list-style-type: none;
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-between;
-    align-items: flex-start;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 #skillset ul li {
@@ -291,6 +286,30 @@ header .fa-caret-down {
 
 #skillset .fa-caret-down {
     color: var(--white);
+}
+
+@media (min-width: 500px) {
+
+    #skillset>ul {
+        max-width: 1050px;
+        padding: 5rem;
+    }
+
+    #skillset li {
+        width: 18rem;
+        height: 3rem;
+        font-size: 1.5rem;
+        margin: 1rem 3rem;
+    }
+
+    #skillset li>i {
+        font-size: 1.5rem;
+    }
+
+    #skillset svg {
+        height: 1.5rem;
+        width: 1.5rem;
+    }
 }
 
 #projects {
