--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ header>div {
     background-color: var(--grey-2);
     position: fixed;
     top: 0;
+    left: 0;
     width: calc(100% - 2rem);
     padding: 0 1rem 0 1rem;
     display: flex;
