--- a/style.css
+++ b/style.css
@@ -41,8 +41,14 @@ header, #about, #skillset, footer {
     align-items: center;
 }
 
-.fa-caret-down {
+.fa-caret-down, .fa-caret-up {
     font-size: 2rem;
+}
+
+@media (min-width: 600px) {
+    .fa-caret-down, .fa-caret-up {
+        font-size: 3rem;
+    }
 }
 
 header {
@@ -163,10 +169,6 @@ header .fa-caret-down {
 
     header nav>a {
         font-size: 2rem;
-    }
-
-    header .fa-caret-down {
-        font-size: 3rem;
     }
 }
 
@@ -585,6 +587,8 @@ footer span>a {
     color: var(--grey-1);
 }
 
-footer i {
-    font-size: 2rem;
+@media (min-width: 600px) {
+    footer p {
+        font-size: 1.2rem;
+    }
 }
