--- a/index.css
+++ b/index.css
@@ -556,17 +556,6 @@ footer {
     align-items: center;
 }
 
-footer hr {
-    width: 10rem;
-    height: 0.2rem;
-    margin: 2rem 0 2rem 0;
-    border: none;
-    background-color: var(--grey-1);
-}
-
-footer div>a {
-    margin: 0 0.2rem;
-}
 
 footer span:first-of-type {
     display: flex;
@@ -578,6 +567,28 @@ footer span:first-of-type {
 footer span:first-of-type i {
     font-size: 2rem;
     padding: 0 2rem;
+}
+
+footer h2 {
+    padding: 1rem;
+    border: 1px solid var(--grey-1);
+    border-radius: 3px;
+}
+
+footer span:first-of-type h2:hover {
+    text-decoration: underline;
+}
+
+footer hr {
+    width: 10rem;
+    height: 0.2rem;
+    margin: 2rem 0 2rem 0;
+    border: none;
+    background-color: var(--grey-1);
+}
+
+footer div>a {
+    margin: 0 0.2rem;
 }
 
 footer span:last-of-type {
