--- a/contact.css
+++ b/contact.css
@@ -50,6 +50,7 @@ div:first-of-type {
 div:nth-of-type(2) {
     padding-top: 2rem;
     width: 60%;
+    max-width: 420px;
 }
 
 li {
@@ -80,6 +81,14 @@ textarea {
 
     textarea {
         height: 5rem;
+        width: calc(100% - 1rem);
+        padding: 0.5rem;
+    }
+}
+
+@media (min-width: 700px) {
+    textarea {
+        height: 8rem;
         width: calc(100% - 1rem);
         padding: 0.5rem;
     }
