--- a/contact.css
+++ b/contact.css
@@ -47,6 +47,17 @@ div:first-of-type {
     font-weight: bold;
 }
 
+@media (min-width: 500px) {
+
+    #top-bar p:first-of-type {
+        display: none;
+    }
+    
+    #top-bar p:last-of-type {
+        display: inline;
+    }
+}
+
 div:nth-of-type(2) {
     padding-top: 2rem;
     width: 60%;
@@ -70,6 +81,7 @@ textarea {
 }
 
 @media (min-width: 500px) {
+
     input {
         height: 2rem;
         width: calc(100% - 1rem);
