--- a/css/index.css
+++ b/css/index.css
@@ -456,6 +456,34 @@ div.project-4 {
         margin-bottom: none;
     }
 
+    div.project-1:hover {
+        grid-area: project-1;
+        background: linear-gradient(0.25turn, rgba(200, 210, 225, 0.3), rgba(200, 210, 225, 0.3)), url("../assets/projects/architect.png");
+        background-position: center;
+        background-size: cover;
+    }
+    
+    div.project-2:hover {
+        grid-area: project-2;
+        background: linear-gradient(0.25turn, rgba(210, 210, 255, 0.3), rgba(210, 210, 225, 0.3)), url("../assets/projects/spacefrens.png");
+        background-position: center;
+        background-size: cover;
+    }
+    
+    div.project-3:hover {
+        grid-area: project-3;
+        background: linear-gradient(0.25turn, rgba(210, 225, 225, 0.3), rgba(225, 210, 225, 0.3)), url("../assets/projects/pokedex.png");
+        background-position: center;
+        background-size: cover;
+    }
+    
+    div.project-4:hover {
+        grid-area: project-4;
+        background: linear-gradient(0.25turn, rgba(210, 210, 255, 0.1), rgba(210, 210, 225, 0.1)), url("../assets/projects/platformer-crop.png");
+        background-position: center;
+        background-size: cover;
+    }
+
 }
 
 @media (min-width: 1200px) {
